<resources>
    <string name="app_name">hotels_test_task</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hotel">Отель</string>
    <string name="booking">Бронирование</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="minimal_price">от %s ₽</string>
    <string name="price">%s ₽</string>
    <string name="about_hotel">Об отеле</string>

    <string name="comfort">Удобства</string>
    <string name="what_in">Что включено</string>
    <string name="what_not_in">Что не включено</string>
    <string name="essential">Самое необходимое</string>

    <string name="to_choose_room">К выбору номера</string>
    <string name="more_about_room">Подробнее о номере</string>
    <string name="choose_room">Выбрать номер</string>

    <string name="departure_from">Вылет из</string>
    <string name="country_city">Страна, город</string>
    <string name="dates">Даты</string>
    <string name="number_of_nights">Кол-во ночей</string>
    <string name="room">Номер</string>
    <string name="meals">Питание</string>
    <string name="customer_information">Информация о покупателе</string>
    <string name="phone_number">Номер телефона</string>
    <string name="mail">Почта</string>
    <string name="about_data">Эти данные никому не передаются. После оплаты мы вышлем чек на указанные вами номер и почту.</string>
    <string name="count_tourist">%s турист</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="citizenship">Гражданство</string>
    <string name="passport_number">Номер загранпаспорта</string>
    <string name="validity_period_of_the_passport">Срок действия загранпаспорта</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="tour">Тур</string>
    <string name="fuel_fee">Топливный сбор</string>
    <string name="service_fee">Сервисный сбор</string>
    <string name="to_be_paid">К оплате</string>
    <string name="pay_sum">Оплатить %s ₽</string>

    <string name="count_nights">%s ночей</string>

    <string name="order_confirmed">Ваш заказ принят в работу</string>
    <string name="order_info">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="super_button">Супер!</string>
</resources>