<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_items_background"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_tourist_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginVertical="16dp"

            android:layout_marginStart="16dp"

            android:fontFamily="@font/sf_pro_medium"
            tools:text="Первый турист"

            android:textColor="@color/black"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/item_tourist_button_for_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_show_button"

            android:layout_centerInParent="true"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="16dp"/>

    </RelativeLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/item_tourist_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_first_name"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_last_name"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_of_birth"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_date_of_birth"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/citizenship"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_citizenship"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passport_number"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_passport_number"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_text_field_background"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/validity_period_of_the_passport"
                android:textColorHint="@color/text_field_hint"
                android:layout_marginTop="6dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                style="@style/MyTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_tourist_et_validity_period_of_the_passport"
                    android:background="@android:color/transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"

                    android:paddingTop="6dp"

                    android:fontFamily="@font/sf_pro_regular"
                    android:textColor="@color/text_field_text_color"
                    android:textSize="16sp"

                    tools:text=""/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>